# PythonLisp

./: .coverage  .coveragerc  .gitignore  README.md  pyproject.toml  sample.lsp
pythonlisp/: README.md  interpreter.py  main.py  parser_.py  peekable.py  sample.lsp  tokenizer.py
tests/: test_interpreter.py  test_parser.py  test_peekable.py  test_tokenizer.py
